@@ -90,6 +90,8 @@ CONF.MASTER_HOST = NO SYSTEM DEFAULT VALUE
 ##CONF.LOG_IMPORT_NTIMES_POP = 100000
 ##CONF.LOG_LOCAL_OUTPUT_DEV = :$stderr
 
+##CONF.SUBCMD_EXEC_TIMEOUT = 60
+
 ##  CONF.PROCESSOR_MON_ON = false
 ##  CONF.PROCESSOR_MON_INTERVAL = 300
 ##  CONF.PROCESSOR_MON_PSFORMAT = "stat,vsz,rss,sz,pmem,pcpu,nlwp,time,wchan"
