@@ -153,6 +153,8 @@ module Fairy
     def_prop :LOG_IMPORT_NTIMES_POP
     def_prop :LOG_LOCAL_OUTPUT_DEV 
 
+    def_prop :SUBCMD_EXEC_TIMEOUT
+
     def_prop :PROCESSOR_MON_ON
     def_prop :PROCESSOR_MON_INTERVAL
     def_prop :PROCESSOR_MON_PSFORMAT
@@ -329,6 +331,8 @@ module Fairy
   DEFAULT_CONF.LOG_LEVEL = :DEBUG
   DEFAULT_CONF.LOG_IMPORT_NTIMES_POP = 100000
   DEFAULT_CONF.LOG_LOCAL_OUTPUT_DEV = :$stderr
+
+  DEFAULT_CONF.SUBCMD_EXEC_TIMEOUT = 60
 
   DEFAULT_CONF.PROCESSOR_MON_ON = false
   DEFAULT_CONF.PROCESSOR_MON_INTERVAL = 300
